# modb_be

./: .gitignore  Dockerfile  aerich.ini  migrator-fixids.sql  products-migrator.py  products-seed.sql  pyproject.toml  storagebuy-migrator.py  storagebuys.csv  work-migrator.py  workbuy-migrator.py  workbuys.csv  works.csv
.github/workflows/: docker-publish.yml
main/: logger.py  server.py  settings.py  test.py
main/api/: errors.py  models.py  routes.py  schemas.py
main/api/auth/: dependencies.py  errors.py  models.py  permissions.py  routes.py  schemas.py
migrations/models/: 0_20220109110330_init.sql
tests/: test_api.py  tort.py
tests/data/: seed1.py
